# lib-template

./: .clang-format  CMakeLists.txt  Dockerfile
.github/workflows/: cmake.yml
